[gd_scene load_steps=29 format=2]

[ext_resource path="res://arts/menu.png" type="Texture" id=1]
[ext_resource path="res://sounds/main.ogg" type="AudioStream" id=2]
[ext_resource path="res://MenuPage.gd" type="Script" id=3]
[ext_resource path="res://fonts/white-rabbit/whitrabt.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://LoadPage.tscn" type="PackedScene" id=5]
[ext_resource path="res://CommandRunner.tscn" type="PackedScene" id=6]
[ext_resource path="res://arts/music_icon_on.png" type="Texture" id=7]
[ext_resource path="res://arts/music_icon_off.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="DynamicFont" id=24]
size = 38
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 26
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.756863, 1, 0.65098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.756863, 1, 0.65098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.756863, 1, 0.65098, 1 )

[sub_resource type="DynamicFont" id=16]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="Animation" id=21]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}

[node name="MenuPage" type="Node"]
script = ExtResource( 3 )
Runner = ExtResource( 6 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 1547.0
margin_bottom = 880.0
rect_scale = Vector2( 0.664689, 0.693054 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 24, -64 )
scale = Vector2( 0.664689, 0.693054 )

[node name="ResumeButton" type="Button" parent="Buttons"]
margin_left = 48.1428
margin_top = 265.492
margin_right = 298.143
margin_bottom = 335.492
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 15 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_left = 48.1428
margin_top = 357.837
margin_right = 298.143
margin_bottom = 427.837
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="Buttons"]
margin_left = 48.1428
margin_top = 450.182
margin_right = 298.143
margin_bottom = 520.182
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 26 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_left = 48.1428
margin_top = 542.526
margin_right = 298.143
margin_bottom = 612.526
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Buttons"]
margin_left = 48.1428
margin_top = 634.871
margin_right = 298.143
margin_bottom = 704.871
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color_disabled = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover" type="Node2D" parent="."]

[node name="ResumeHover" type="Label" parent="Hover"]
margin_left = 56.0
margin_top = 120.0
margin_right = 306.0
margin_bottom = 190.0
rect_scale = Vector2( 0.665, 0.693 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartHover" type="Label" parent="Hover"]
margin_left = 56.0
margin_top = 184.0
margin_right = 306.0
margin_bottom = 254.0
rect_scale = Vector2( 0.665, 0.693 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadHover" type="Label" parent="Hover"]
margin_left = 56.0
margin_top = 248.0
margin_right = 306.0
margin_bottom = 318.0
rect_scale = Vector2( 0.665, 0.693 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Load"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsHover" type="Label" parent="Hover"]
margin_left = 56.0
margin_top = 312.0
margin_right = 306.0
margin_bottom = 382.0
rect_scale = Vector2( 0.665, 0.693 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitHover" type="Label" parent="Hover"]
margin_left = 56.0
margin_top = 376.0
margin_right = 306.0
margin_bottom = 446.0
rect_scale = Vector2( 0.665, 0.693 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="WindowDialog" parent="."]
visible = true
margin_left = 368.0
margin_top = 200.0
margin_right = 668.0
margin_bottom = 350.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )
custom_constants/close_h_ofs = 19
custom_constants/close_v_ofs = -5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Tutorial"]
margin_left = 92.0
margin_top = 8.0
margin_right = 211.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New Session"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tutorial"]
margin_left = 16.0
margin_top = 28.0
margin_right = 286.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
text = "Enter the tutorial?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="Tutorial"]
margin_left = 32.0
margin_top = 96.0
margin_right = 132.0
margin_bottom = 136.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="Tutorial"]
margin_left = 168.0
margin_top = 96.0
margin_right = 268.0
margin_bottom = 136.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 23 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="WindowDialog" parent="."]
margin_left = 256.0
margin_top = 104.0
margin_right = 756.0
margin_bottom = 504.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )
custom_fonts/title_font = SubResource( 16 )
custom_constants/close_h_ofs = 19
custom_constants/close_v_ofs = -5
custom_constants/title_height = -28
window_title = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="TextEdit" parent="Credits"]
margin_left = 16.0
margin_top = 38.0
margin_right = 486.0
margin_bottom = 388.0
custom_styles/read_only = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
custom_fonts/font = SubResource( 12 )
custom_colors/selection_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.756863, 1, 0.65098, 1 )
custom_colors/font_color_readonly = Color( 0.756863, 1, 0.65098, 1 )
readonly = true
override_selected_font_color = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadPage" parent="." instance=ExtResource( 5 )]
margin_left = 216.0
margin_top = 96.0
margin_right = 816.0
margin_bottom = 496.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Music"]
anims/FadeIn = SubResource( 21 )

[node name="MuteButton" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 229.0
margin_bottom = 229.0
rect_scale = Vector2( 0.2, 0.2 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Tutorial/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="Tutorial/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_Button_pressed"]
